--- a/frontend/ata-dashboard/index.html
+++ b/frontend/ata-dashboard/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATA-Dashboard</title>
+    <link rel="icon" type="image/png" href="/ata_logo.png" />
   </head>
   <body>
     <div id="root"></div>
